--- a/assets/appinfo.json
+++ b/assets/appinfo.json
@@ -4,10 +4,10 @@
   "vendor": "My Company",
   "type": "web",
   "main": "index.html",
-  "title": "YouTube AdFree",
+  "title": "YouTube",
   "icon": "icon.png",
   "largeIcon": "largeIcon.png",
-  "iconColor": "#ff0000",
+  "iconColor": "#ffffff",
   "support360Content": true,
   "checkUpdateOnLaunch": false,
   "accessibility": {
