--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,8 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          automatic_release_tag: ${{ github.ref }}
-          title: Release ${{ github.ref }}
+          automatic_release_tag: ${{ github.ref_name }}
+          title: Release ${{ github.ref_name }}
           draft: false
           prerelease: true
 
