--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "webpack",
     "package": "ares-package -n dist",
     "deploy": "node tools/deploy.mjs",
-    "launch": "ares-launch youtube.leanback.v4",
-    "manifest": "node tools/gen-manifest.js youtube.leanback.v4.manifest.json",
+    "launch": "ares-launch youtube.tinvn.v1",
+    "manifest": "node tools/gen-manifest.js youtube.tinvn.v1.manifest.json",
     "version": "node tools/sync-version.js && git add assets/appinfo.json",
     "prepare": "husky install"
   },
